# stm32kit

./: .gitignore
stm32-console/: CMakeLists.txt  testbed.c
stm32-console/include/: stm32_kit.h
stm32-console/include/stm32_kit/: adc.h  button.h  chrono.h  gpio.h  keypad.h  lcd.h  led.h  pin.h  platform.h  timers.h  uart.h
stm32-emulator/: CMakeLists.txt  README.md  testbed.c  versionlog.csv
stm32-emulator/config/: config.h
stm32-emulator/impl/: CMakeLists.txt  console.c  console.h  core.c  core.h  input.c  input.h  stm32f4xx.c  stm32f4xx.h
stm32-emulator/impl/keypad/: Keypad.c  Keypad.h
stm32-emulator/impl/kit/: CMakeLists.txt  adc.c  button.c  chrono.c  gpio.c  keypad.c  lcd.c  led.c  pin.c  platform.c  timers.c  uart.c
stm32-emulator/impl/platform/linux/: console.c
stm32-emulator/include/: stm32_kit.h
stm32-emulator/include/stm32_kit/: adc.h  button.h  chrono.h  gpio.h  keypad.h  lcd.h  led.h  pin.h  platform.h  timers.h  uart.h
templates/: console.template.c
